# kawaii-pkg

./: Cargo.toml  README.md  install.sh
.github/workflows/: pages.yml
docs/: index.html  robots.txt  sitemap.xml
src/: main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/core/: error.rs  mod.rs  types.rs
src/detector/: mod.rs
src/doctor/: mod.rs
src/history/: mod.rs
src/logger/: mod.rs
src/managers/: apk.rs  apt.rs  brew.rs  dnf.rs  flatpak.rs  mod.rs  nix.rs  pacman.rs  paru.rs  snap.rs  xbps.rs  yay.rs  yum.rs  zypper.rs
src/search/: mod.rs
src/ui/: mod.rs
src/utils/: mod.rs
